# public

./: PROJECT_CONSISTENCY_AUDIT.md  README.md
automl-agent/: .env.example  PROJECT_MANIFEST.md  README.md  pyproject.toml  pytest.ini  quick_start.py  requirements-backup.txt  requirements.txt
automl-agent/.streamlit/: config.toml
automl-agent/api/: main.py
automl-agent/api/middleware/: __init__.py  auth.py  error_handling.py  rate_limiting.py
automl-agent/api/models/: __init__.py  request_models.py  response_models.py
automl-agent/api/routers/: __init__.py  agents.py  health.py  workflows.py
automl-agent/data/: __init__.py
automl-agent/data/samples/: dataset_loader.py  test_data.csv
automl-agent/data/schemas/: airline_passengers_schema.json  california_housing_schema.json  customer_churn_schema.json
automl-agent/docker/: .dockerignore  README.md  api.Dockerfile  docker-compose.yml  init-db.sql  nginx.conf  streamlit.Dockerfile
automl-agent/docker/monitoring/: prometheus.yml
automl-agent/docs/: api_examples.md  examples.md
automl-agent/examples/: ai_agent_recommendations.md
automl-agent/examples/basic_examples/: api_examples.md  command_line_examples.md  streamlit_examples.md
automl-agent/infrastructure/streamlit/: app.py
automl-agent/scripts/: aws_deploy.py  cleanup_aws.py  production_server.py  sagemaker_autopilot_deploy.py  test_langsmith_monitoring.py
automl-agent/src/: __init__.py  automl_platform.py
automl-agent/src/agents/: __init__.py  base_agent.py  classification_agent.py  clustering_agent.py  communication.py  (+12 more)
generative-econometric-forecasting/: .env.example  .gitignore  README.md  demo.py  pyproject.toml  pytest.ini  quick_start.py  requirements.txt
generative-econometric-forecasting/api/: __init__.py  main.py
generative-econometric-forecasting/data/: fred_client.py
generative-econometric-forecasting/docker/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml  nginx.conf
generative-econometric-forecasting/docs/: API_REFERENCE.md  ARCHITECTURE.md  BUSINESS_APPLICATIONS.md  DEPLOYMENT_GUIDE.md  FOUNDATION_MODELS.md  LANGSMITH_INTEGRATION.md  PORTFOLIO_SUMMARY.md  PORTFOLIO_TECH_STACK.md  docker.md  examples_guide.md  troubleshooting.md
generative-econometric-forecasting/examples/: __init__.py
generative-econometric-forecasting/models/: __init__.py  forecasting_models.py  neural_forecasting.py  r_statistical_models.py  sentiment_adjusted_forecasting.py
generative-econometric-forecasting/scripts/: install_dependencies.py  langsmith_enhanced_monitoring.py  langsmith_monitoring.py  setup_environment.py  test_langsmith_tracing.py
generative-econometric-forecasting/src/: __init__.py  main.py  platform.py
generative-econometric-forecasting/tests/: __init__.py  conftest.py  run_tests.py  test_api_integrations.py  test_basic_functionality.py  test_data_processing.py  test_forecasting_models.py
media-mix-modeling/: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  quick_start.py  requirements.txt
media-mix-modeling/api/: __init__.py  main.py
media-mix-modeling/data/: __init__.py  facebook_ads_client.py  google_ads_client.py  media_data_client.py
media-mix-modeling/docker/: Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml
media-mix-modeling/docs/: API_REFERENCE.md  ARCHITECTURE.md  BUSINESS_APPLICATIONS.md  DEPLOYMENT_GUIDE.md  MMM_COMPONENTS.md  docker.md  examples_guide.md  troubleshooting.md
media-mix-modeling/examples/: __init__.py
media-mix-modeling/models/: __init__.py
media-mix-modeling/production/: deployment_metadata.json  deployment_summary.json  mmm_production_model.joblib  production_api.py
media-mix-modeling/scripts/: production_server.py  run_tests.py  setup_r_integration.py
media-mix-modeling/src/: __init__.py  mlflow_integration.py
media-mix-modeling/tests/: __init__.py  conftest.py  test_airflow_dags.py  test_aws_deployment.py  test_budget_optimization.py  test_data_client.py  test_integration.py  test_mmm_models.py  test_performance.py  test_r_integration.py
multi-agent-orchestration/: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  quick_start.py  requirements.txt
multi-agent-orchestration/api/: __init__.py  main.py
multi-agent-orchestration/data/: __init__.py
multi-agent-orchestration/docker/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml  nginx.conf
multi-agent-orchestration/docs/: api_reference.md  architecture.md  business_applications.md  deployment_guide.md  docker.md  examples_guide.md  infrastructure.md  project_manifest.md  troubleshooting.md
multi-agent-orchestration/examples/: __init__.py
multi-agent-orchestration/infrastructure/: README.md
multi-agent-orchestration/models/: README.md  __init__.py
multi-agent-orchestration/scripts/: aws-migration.py  docker-build.py  run-tests.py  start_api.py
multi-agent-orchestration/src/: __init__.py  __main__.py  multi_agent_platform.py
multi-agent-orchestration/tests/: __init__.py  conftest.py
vision-object-classifier/: .env.example  .gitignore  DEPLOYMENT_READY.md  README.md  pyproject.toml  pytest.ini  quick_start.py  requirements.txt
vision-object-classifier/api/: __init__.py  main.py
vision-object-classifier/data/: __init__.py
vision-object-classifier/docker/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml
vision-object-classifier/docs/: API_REFERENCE.md  ARCHITECTURE.md  SYNTHETIC_DATA.md  TRAINING_GUIDE.md  business_applications.md  deployment_guide.md  deployment_strategies.md  docker.md  examples_guide.md  troubleshooting.md
vision-object-classifier/examples/: __init__.py
vision-object-classifier/models/: balanced_config.json  training_config.json
vision-object-classifier/scripts/: download_data.py  setup.py  test_installation.py
vision-object-classifier/src/: __init__.py  predict.py  synthetic_data.py  train.py
vision-object-classifier/tests/: __init__.py  conftest.py  run_tests.py  test_data_utils.py  test_model.py  test_predict.py  test_synthetic_data.py
(+287 files in other folders)
