[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "generative-econometric-forecasting"
dynamic = ["version"]
description = "State-of-the-art Generative AI Econometric Forecasting & Demand Planning Platform"
authors = [
    {name = "Economic Forecasting Team", email = "forecasting@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["economics", "forecasting", "ai", "machine-learning", "timeseries", "econometrics", "demand-planning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry", 
    "Intended Audience :: Science/Research",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.1.0",
    "statsmodels>=0.13.0",
    "fredapi>=0.5.0",
    "python-dotenv>=0.19.0",
    "requests>=2.28.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.10.0",
    "langchain>=0.1.0",
    "openai>=1.0.0",
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "newsapi-python>=0.2.6",
    "feedparser>=6.0.10",
    "beautifulsoup4>=4.11.0",
    "pymc>=5.10.0",
    "arviz>=0.15.0",
    "nixtla>=0.5.0",
    "chronos-forecasting>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0", 
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=1.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Homepage = "https://github.com/your-username/generative-econometric-forecasting"
Documentation = "https://github.com/your-username/generative-econometric-forecasting/docs"
Repository = "https://github.com/your-username/generative-econometric-forecasting"
"Bug Reports" = "https://github.com/your-username/generative-econometric-forecasting/issues"

[project.scripts]
gen-econ-forecast = "quick_start:main"
economic-forecast = "quick_start:main"

[tool.setuptools]
packages = ["src", "data", "models", "scripts"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "data*", "models*", "scripts*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "fredapi.*",
    "newsapi.*",
    "feedparser.*",
    "nixtla.*",
    "chronos.*",
]
ignore_missing_imports = true