[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-orchestration"
version = "0.1.0"
description = "Multi-Agent Orchestration Platform with Pipeline, Supervisor, Parallel, and Reflective Patterns"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Joshua Morrison", email = "joshamorrison@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "langchain>=0.1.0",
    "langgraph>=0.0.40", 
    "langsmith>=0.0.70",
    "openai>=1.3.0",
    "anthropic>=0.8.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
    "tenacity>=8.2.0",
    "asyncio>=3.4.3",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
aws = [
    "boto3>=1.26.0",
    "boto3-stubs[bedrock]>=1.34.0",
]
database = [
    "redis>=5.0.0",
    "sqlalchemy>=1.4.0",
    "psycopg2-binary>=2.9.0",
]
monitoring = [
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.21.0",
]

[project.urls]
Homepage = "https://github.com/joshamorrison/public/tree/main/multi-agent-orchestration"
Repository = "https://github.com/joshamorrison/public.git"
Documentation = "https://github.com/joshamorrison/public/tree/main/multi-agent-orchestration/docs"
Issues = "https://github.com/joshamorrison/public/issues"

[project.scripts]
multi-agent = "src.platform:main"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=html --cov-report=term"