[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vision-object-classifier"
version = "1.0.0"
authors = [
    {name = "Vision Classifier Team", email = "team@example.com"},
]
description = "A deep learning solution for classifying dish cleanliness using computer vision"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["computer-vision", "deep-learning", "classification", "pytorch", "dishes"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/your-username/vision-object-classifier"
"Bug Reports" = "https://github.com/your-username/vision-object-classifier/issues"
"Source" = "https://github.com/your-username/vision-object-classifier"

[project.scripts]
vision-classifier-train = "scripts.cli.train_model:main"
vision-classifier-predict = "scripts.cli.predict_image:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "isort>=5.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[tool.setuptools]
packages = {find = {where = ["src"]}}
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]